@@ -1,5 +1,4 @@
-﻿using RuneMagic.Source.SpellEffects;
-using SpaceCore;
+﻿using SpaceCore;
 using StardewValley;
 
 namespace RuneMagic.Source.Spells
@@ -15,19 +14,19 @@ namespace RuneMagic.Source.Spells
 
         public override bool Cast()
         {
-            var spellTexture = "fireball";
-            var bonusDamage = Game1.player.GetCustomSkillLevel(RuneMagic.PlayerStats.MagicSkill);
-            var minDamage = 1;
-            var maxDamage = 4;
-            var Area = 4;
-            var velocity = 8;
-            var range = 300;
-            var spread = 0;
-            var isHoming = false;
-            var hitSound = "explosion";
+            //var spellTexture = "fireball";
+            //var bonusDamage = Game1.player.GetCustomSkillLevel(RuneMagic.PlayerStats.MagicSkill);
+            //var minDamage = 1;
+            //var maxDamage = 4;
+            //var Area = 4;
+            //var velocity = 8;
+            //var range = 300;
+            //var spread = 0;
+            //var isHoming = false;
+            //var hitSound = "explosion";
 
-            Game1.currentLocation.projectiles.Add(new SpellProjectile(Game1.player, spellTexture, minDamage, maxDamage, bonusDamage, Area,
-                velocity, range, spread, isHoming, hitSound));
+            //Game1.currentLocation.projectiles.Add(new SpellProjectile(Game1.player, spellTexture, minDamage, maxDamage, bonusDamage, Area,
+            //    velocity, range, spread, isHoming, hitSound));
             return true;
         }
 
