@@ -1,7 +1,10 @@
-﻿using RuneMagic.Source.SpellEffects;
+﻿using Microsoft.Xna.Framework.Graphics;
+using RuneMagic.Source.Effects;
 using SpaceCore;
 using StardewValley;
 using System;
+using System.Collections.Generic;
+using System.Linq;
 
 namespace RuneMagic.Source.Spells
 {
@@ -17,22 +20,13 @@ namespace RuneMagic.Source.Spells
 
         public override bool Cast()
         {
-            var projectileNumber = Game1.player.GetCustomSkillLevel(RuneMagic.PlayerStats.MagicSkill) / 2 + 1;
-            var spellTexture = "magic_missile";
-            var bonusDamage = Game1.player.GetCustomSkillLevel(RuneMagic.PlayerStats.MagicSkill);
-            var minDamage = 1;
-            var maxDamage = 4;
-            var Area = 0;
-            var velocity = 7;
-            var range = 400;
-            var spread = 2;
-            var isHoming = false;
-            var hitSound = "flameSpellHit";
-
-            for (int i = 0; i < projectileNumber; i++)
-                Game1.currentLocation.projectiles.Add(new SpellProjectile(Game1.player, spellTexture, minDamage, maxDamage, bonusDamage, Area,
-     velocity, range, spread, isHoming, hitSound));
-            return true;
+            if (!RuneMagic.PlayerStats.ActiveEffects.OfType<CastingMagicMissile>().Any())
+            {
+                Effect = new CastingMagicMissile(Name);
+                return true;
+            }
+            else
+                return false;
         }
     }
 }
